--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="/css/home/login.css">
+<link rel="stylesheet" href="/css/home/index.css">
 <script src="/js/home/login.js" defer></script>
-<title>Document</title>
+<title>Login</title>
 </head>
 <body>
 <div class="login-page">
