--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -11,16 +11,15 @@
 <body>
     <div class="header">
         <div class="KU">
-            <p>KUCIS</p>
+            <p><a href="/login">KUCIS</a></p>
         </div> 
         <h1>비속어 탐지 테스트웹</h1>
         <nav>
             <ul>
                 <li><a href="">쪽지</a></li>
-                <li><a href="/board">게시판</a></li>
+                <li><a href="/post_view">게시판</a></li>
             </ul>
-        </nav>
-        </div>        
+        </nav>        
     </div>
     <div id="posts">
         <h3>게시물</h3>
