--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -38,7 +38,7 @@
             <div class="form-actions">
                 <input type="submit" value="가입" id="button">
             </div>
-            <p>Already registered?<a href="/index">Login</a></p>
+            <p>Already registered?<a href="/"> Login</a></p>
         </form>
     </div>
 </body>
