--- a/app/src/public/css/home/main.css
+++ b/app/src/public/css/home/main.css
@@ -21,6 +21,19 @@ body {
     font-weight: bold;
 }
 
+.KU a {
+    text-decoration: none;
+}
+.KU a:link{
+    color: #ffcc00;
+}
+.KU a:visited{
+    color: #ffcc00;
+}
+.KU a:hover{
+    color: white;
+}
+
 .header h1 {
     color: #fff;
     text-align: center;
@@ -42,15 +55,23 @@ nav ul li {
 
 nav ul li a {
     color: #fff;
-    text-decoration: none;
     font-size: 16px;
     transition: color 0.3s ease; /* 커서를 올렸을 때 색상 전환 시간 설정 */
+    text-decoration: none;
 }
 
-nav ul li a:hover {
-    color: #ffcc00; /* 커서를 올렸을 때 색상이 #ffcc00으로 변경됨 */
+#button a{
+    text-decoration: none;
 }
 
+
+#button a:visited{
+    color: #333;
+}
+
+#button a:hover{
+    color: #9b9797;
+}
 
 #posts {
     padding: 20px;
@@ -75,17 +96,20 @@ nav ul li a:hover {
     color: #555;
 }
 
-#button {
-    padding: 10px 20px;
+.post #button {
+    padding: 8px 16px;
     width: 30px;
-    font-size: 16px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    outline: 0;
     margin-left: 10px;
     background-color: #ffcc00;
-    color: #333;
     font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
     transition: background-color 0.3s ease, box-shadow 0.3s ease; /* 효과 전환 시간 설정 */
 }
 
@@ -138,4 +162,8 @@ nav ul li a:hover {
     font-size: 16px;
     line-height: 1.5;
     margin: 10px 0;
+}
+
+.post #button:focus{
+    color: #ffbb00;
 }
