Update and rename app/src/public/css/register.css to app/src/public/css/home/register.css

--- a/app/src/public/css/home/register.css
+++ b/app/src/public/css/home/register.css
@@ -109,3 +109,15 @@ span {
     transform: translateY(-50%);
     color: #999;
 }
+
+a{
+    text-decoration: none;
+}
+
+a:visited{
+    color: #ffcc00;
+}
+
+a:hover{
+    color: greenyellow;
+}
