--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -14,7 +14,7 @@
     <form class="login-form">
         <input id="id" type="text" placeholder="아이디"/>
         <input id="psword" type="password" placeholder="비밀번호"/>
-        <p id="button"><a href="/login">Login</a></p id="button">
+        <button id="button">Login</button id="button"> 
         <p class="message">Not registered? <a href="/register">Create an account</a></p>
     </form>
     </div>
