--- a/app/src/views/home/message.ejs
+++ b/app/src/views/home/message.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>쪽지함</title>
-    <link rel="stylesheet" href="../../public/css/home/message.css" />
+    <link rel="stylesheet" href="/css/home/message.css" />
     <!-- 외부 CSS 파일을 링크 -->
   </head>
   <body>
