--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -15,12 +15,12 @@
         <div class="login-form">
             <form>
                 <div class="form-group">
-                    <input id="id" type="text" placeholder="아이디" required>
+                    <input id="id" type="text" placeholder="아이디" name="name" required>
                 </div>
                 <div class="form-group">
-                    <input id="psword" type="password" placeholder="비밀번호" required>
+                    <input id="psword" type="password" placeholder="비밀번호" name="psword" required>
                 </div>
-                <button id="button" type="button">로그인</button>
+                <button id="button" type="submit" value="로그인">로그인</button>
                 <p class="message">Not registered? <a href="/register">Create an account</a></p>
             </form>
         </div>
