--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -23,6 +23,9 @@
           <li><a href="/community">게시판</a></li>
         </ul>
       </nav>
+      <div class="logout">
+            <p><a href="/delete">로그아웃</a></p>
+        </div>
     </div>
     <div id="posts">
       <h3>게시물</h3>
