--- a/app/src/views/home/message.ejs
+++ b/app/src/views/home/message.ejs
@@ -18,23 +18,21 @@
       <div class="form-title">내 쪽지 리스트</div>
 
       <ul class="message-list">
+        <% if (messages.length > 0) { %> <% messages.forEach(function(message) {
+        %>
         <li class="message-item">
-          <span class="message-title">쪽지 제목 1</span>
-          <span class="message-time">2024-10-01 14:00</span>
+          <span class="message-title"><%= message.postnum %></span>
+          <!-- 쪽지 제목 -->
+          <span class="message-time"><%= message.created_at %></span>
+          <!-- 쪽지 시간 -->
           <div class="message-actions">
             <button class="button-view">보기</button>
             <button class="button-delete">삭제</button>
           </div>
         </li>
-        <li class="message-item">
-          <span class="message-title">쪽지 제목 2</span>
-          <span class="message-time">2024-09-30 11:45</span>
-          <div class="message-actions">
-            <button class="button-view">보기</button>
-            <button class="button-delete">삭제</button>
-          </div>
-        </li>
-        <!-- 추가할 쪽지 -->
+        <% }); %> <% } else { %>
+        <li class="message-item">받은 쪽지가 없습니다.</li>
+        <% } %>
       </ul>
     </div>
   </body>
