--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -13,7 +13,7 @@
             <h1><a href="/" class="logo">KUCIS</a></h1>
         </div>
         <div class="login-form">
-            <form>
+            <form action="/" method="post">
                 <div class="form-group">
                     <input id="id" type="text" placeholder="아이디" name="name" required>
                 </div>
