--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <script src="/js/home/login.js" defer></script>
-    <link rel="stylesheet" href="/css/home/index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/home/index.css" />
+  </head>
+  <body>
     <div class="login-container">
-        <div class="login-header">
-            <h1><a href="/" class="logo">KUCIS</a></h1>
-        </div>
-        <div class="login-form">
-            <form>
-                <div class="form-group">
-                    <input id="id" type="text" placeholder="아이디" name="name" required>
-                </div>
-                <div class="form-group">
-                    <input id="psword" type="password" placeholder="비밀번호" name="psword" required>
-                </div>
-                <button id="button" type="submit" value="로그인">로그인</button>
-                <p class="message">Not registered? <a href="/register">Create an account</a></p>
-            </form>
-        </div>
+      <div class="login-header">
+        <h1><a href="/" class="logo">KUCIS</a></h1>
+      </div>
+      <div class="login-form">
+        <form action="/" method="post">
+          <div class="form-group">
+            <input
+              id="id"
+              type="text"
+              placeholder="아이디"
+              name="name"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <input
+              id="psword"
+              type="password"
+              placeholder="비밀번호"
+              name="psword"
+              required
+            />
+          </div>
+          <button id="button" type="submit" value="로그인">로그인</button>
+          <p class="message">
+            Not registered? <a href="/register">Create an account</a>
+          </p>
+        </form>
+      </div>
     </div>
-</body>
+  </body>
 </html>
