쪽지 추출 기능 (미완성)

--- a/app/src/views/home/message_chat.ejs
+++ b/app/src/views/home/message_chat.ejs
@@ -57,6 +57,12 @@
           />
           <button type="submit">전송</button>
         </form>
+
+        <!-- "추출" 버튼 추가 -->
+        <form method="post" action="/message/chat/extract">
+          <input type="hidden" name="roomid" value="<%= roomid %>" />
+          <button type="submit" class="extract-button">추출</button>
+        </form>
       </div>
     </div>
 
