--- a/app/src/views/home/community.ejs
+++ b/app/src/views/home/community.ejs
@@ -23,7 +23,7 @@
             <% if (posts.length > 0) { %>
                 <% posts.forEach(function(post) { %>
                     <div class="post-item">
-                        <div class="post-title"><a href="/post_view?id=<%= post.postnum %>"><%= post.title %></a></a></div>
+                        <div class="post-title"><a href="/post/<%= post.postnum %>"><%= post.title %></a></a></div>
                         <div class="post-content"><%= post.content %></div>
                         <div class="post-meta">작성자: <%= post.id %> | <%= new Date(post.created_at).toLocaleString() %></div>
                     </div>
