--- a/app/src/views/home/message.ejs
+++ b/app/src/views/home/message.ejs
@@ -18,12 +18,14 @@
       <div class="form-title">내 쪽지 리스트</div>
 
       <ul class="message-list">
-        <% if (messages.length > 0) { %> <% messages.forEach(function(message) {
+        <% if (messages.length > 0) { %> <% messages.forEach(function(message1) {
         %>
         <li class="message-item">
-          <span class="message-title"><%= message.message_title %></span>
+          <p class="message-title"><%= message1.postnum %></p>
+          <p class="message-title">보낸 사람: <%= message1.sender %></p>
+          <p>받는 사람: <%= message1.reciper %></p>
+          <p  class="message-time">보낸 시간: <%= message1.created_at %></p>
           <!-- 쪽지 제목 -->
-          <span class="message-time"><%= message.created_at %></span>
           <!-- 쪽지 시간 -->
           <div class="message-actions">
             <!-- roomid를 쿼리 파라미터로 전달하여 message_chat으로 이동 -->
@@ -31,7 +33,7 @@
               <input
                 type="hidden"
                 name="roomid"
-                value="<%= message.roomid %>"
+                value="<%= message1.roomid %>"
               />
               <button type="submit" class="button-view">보기</button>
             </form>
