--- a/app/src/views/home/community.ejs
+++ b/app/src/views/home/community.ejs
@@ -10,7 +10,7 @@
 
     <!-- 헤더: KUCIS 로고 -->
     <div class="header">
-        <a href="/login" class="logo">KUCIS</a>
+        <a href="/login" class="logo">NGDB</a>
     </div>
 
     <!-- 구분선 -->
