--- a/app/src/views/home/message_chat.ejs
+++ b/app/src/views/home/message_chat.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="/login" class="logo">KUCIS</a>
+      <a href="/login" class="logo">NGDB</a>
     </div>
 
     <div class="separator"></div>
