--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -10,7 +10,7 @@
   <body>
     <div class="login-container">
       <div class="login-header">
-        <h1><a href="/" class="logo">KUCIS</a></h1>
+        <h1><a href="/" class="logo">NGDB</a></h1>
       </div>
       <div class="login-form">
         <form action="/" method="post">
