--- a/app/src/views/home/post_view.ejs
+++ b/app/src/views/home/post_view.ejs
@@ -192,7 +192,7 @@
   <body>
     <!-- 헤더: KUCIS 로고 -->
     <div class="header">
-      <a href="/login" class="logo">KUCIS</a>
+      <a href="/login" class="logo">NGDB</a>
     </div>
 
     <!-- 구분선 -->
