--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -99,7 +99,7 @@
   </head>
   <body>
     <div class="signup-container">
-      <h1>KUCIS</h1>
+      <h1>NGDB</h1>
       <form id="joinForm">
         <div class="form-group">
           <label for="id">아이디</label>
@@ -150,32 +150,6 @@
             placeholder="이름을 입력하세요"
             required
           />
-        </div>
-
-        <!-- 이용약관 및 개인정보처리방침 동의 체크박스 같은 줄에 배치 -->
-        <div class="form-group terms">
-          <input type="checkbox" id="terms-agree" name="terms-agree" required />
-          <label for="terms-agree">
-            <a href="/file/이용 약관.pdf" download="이용약관.pdf"
-              >이용약관</a
-            >에 동의합니다.
-          </label>
-        </div>
-
-        <div class="form-group privacy">
-          <input
-            type="checkbox"
-            id="privacy-agree"
-            name="privacy-agree"
-            required
-          />
-          <label for="privacy-agree">
-            <a
-              href="/file/개인정보처리방침.pdf"
-              download="개인정보처리방침.pdf"
-              >개인정보처리방침</a
-            >에 동의합니다.
-          </label>
         </div>
 
         <div class="form-actions">
